# src/main/java/com/fighterhub/dto/DiscordAuthorizeResponse.java
@@ -1,0 +1,6 @@
+package com.fighterhub.dto;
+
+public record DiscordAuthorizeResponse(
+    String authorizationUrl
+) {
+}
